--- a/ui/pages/index.dot.html
+++ b/ui/pages/index.dot.html
@@ -1,9 +1,12 @@
 {
-  "body_class": "home",
   "title": "Page Title",
-  "description": "Page description",
-  "keywords": "Page Keywords",
   "template": "application"
 }
 
-<h1>Homepage</h1>
+<section class="intro">
+  <p class="intro__copy">Indipendant Clothing Brand<br /> 
+    Based in London<br /> 
+    Est. 2016</p>
+
+  <a href="/shop.html" class="button">Shop Now</a>
+</section>
