product image carousel

--- a/ui/pages/detail.dot.html
+++ b/ui/pages/detail.dot.html
@@ -5,8 +5,18 @@
 
 <section class="wrapper">
   <article class="product">
-    <div class="product__image">
-      <img src="app/images/content/product.png" />
+    <div class="product__image" data-behaviour="product-images">
+      <div>
+        <img src="app/images/content/product.png" />
+      </div>
+
+      <div>
+        <img src="app/images/content/product.png" />
+      </div>
+
+      <div>
+        <img src="app/images/content/product.png" />
+      </div>
     </div>
 
     <header class="product__content">
