vertical align fix

--- a/ui/pages/index.dot.html
+++ b/ui/pages/index.dot.html
@@ -3,8 +3,8 @@
   "template": "application"
 }
 
-<section class="intro">
-  <p class="intro__copy">Indipendant Clothing Brand<br /> 
+<section class="section">
+  <p class="section__copy">Indipendant Clothing Brand<br /> 
     Based in London<br /> 
     Est. 2016</p>
 
