Homepage and listing start

--- a/ui/pages/index.dot.html
+++ b/ui/pages/index.dot.html
@@ -3,10 +3,16 @@
   "template": "application"
 }
 
-<section class="section">
-  <p class="section__copy">Indipendant Clothing Brand<br /> 
+<section class="banner">
+  <header class="banner__header">
+    <a href="/" class="banner__logo">
+      <img src="app/images/content/jparre-logo.svg" alt="J.Parré Apparel" />
+    </a>
+    <h1 class="banner__title">J.Parré</h1>
+    <p class="banner__copy">Indipendant Clothing Brand<br /> 
     Based in London<br /> 
     Est. 2016</p>
 
-  <a href="/shop.html" class="button">Shop Now</a>
+    <a href="/shop.html" class="button">Shop Now</a>
+  </header>
 </section>
