--- a/ui/pages/shop.dot.html
+++ b/ui/pages/shop.dot.html
@@ -3,30 +3,40 @@
   "template": "application"
 }
 
-<section class="wrapper">
-  <ul class="listing">
-    <li>
-      <a href="/detail.html">
-        <img src="app/images/content/product.png" />
-      </a>
-    </li>
+<section class="section">
+  <div class="wrapper">
 
-    <li>
-      <a href="/detail.html">
-        <img src="app/images/content/product.png" />
-      </a>
-    </li>
-    
-    <li>
-      <a href="/detail.html">
-        <img src="app/images/content/product.png" />
-      </a>
-    </li>
-
-    <li>
-      <a href="/detail.html">
-        <img src="app/images/content/product.png" />
-      </a>
-    </li>
-  </ul>
+    <ul class="grid">
+      <li class="grid__item grid__item--large">
+        <a href="#">
+          <img src="app/images/content/product-green-stack.jpg" />
+        </a>
+      </li>
+      <li class="grid__item">
+        <a href="#">
+          <img src="app/images/content/product-nape.jpg" />
+        </a>
+      </li>
+      <li class="grid__item">
+        <a href="#">
+          <img src="app/images/content/product-long-black-stack.jpg" />
+        </a>
+      </li>
+      <li class="grid__item grid__item--large grid__item--end">
+        <a href="#">
+          <img src="app/images/content/product-long-white.jpg" />
+        </a>
+      </li>
+      <li class="grid__item">
+        <a href="#">
+          <img src="app/images/content/product-white-stack.jpg" />
+        </a>
+      </li>
+      <li class="grid__item">
+        <a href="#">
+          <img src="app/images/content/product-print.jpg" />
+        </a>
+      </li>
+    </ul>
+  </div>
 </section>
