--- a/ui/pages/shop.dot.html
+++ b/ui/pages/shop.dot.html
@@ -6,33 +6,33 @@
 <section class="section">
   <div class="wrapper">
 
-    <ul class="grid">
-      <li class="grid__item grid__item--large">
-        <a href="#">
+    <ul class="grid grid--4-columns">
+      <li class="grid__double">
+        <a href="detail.html">
           <img src="app/images/content/product-green-stack.jpg" />
         </a>
       </li>
-      <li class="grid__item">
+      <li>
         <a href="#">
           <img src="app/images/content/product-nape.jpg" />
         </a>
       </li>
-      <li class="grid__item">
+      <li>
         <a href="#">
           <img src="app/images/content/product-long-black-stack.jpg" />
         </a>
       </li>
-      <li class="grid__item grid__item--large grid__item--end">
+      <li class="grid__double grid__end">
         <a href="#">
           <img src="app/images/content/product-long-white.jpg" />
         </a>
       </li>
-      <li class="grid__item">
+      <li>
         <a href="#">
           <img src="app/images/content/product-white-stack.jpg" />
         </a>
       </li>
-      <li class="grid__item">
+      <li>
         <a href="#">
           <img src="app/images/content/product-print.jpg" />
         </a>
