--- a/ui/pages/shop.dot.html
+++ b/ui/pages/shop.dot.html
@@ -5,6 +5,11 @@
 
 <section class="section">
   <div class="wrapper">
+    <header class="banner">
+      <a href="/" class="banner__logo">
+        <img src="app/images/content/jparre-logo.svg" alt="J.Parré Apparel" />
+      </a>
+    </header>
 
     <ul class="grid grid--4-columns">
       <li class="grid__double">
@@ -40,3 +45,5 @@
     </ul>
   </div>
 </section>
+
+{{= it.include('footer') }}
