--- a/ui/pages/detail.dot.html
+++ b/ui/pages/detail.dot.html
@@ -6,6 +6,12 @@
 
 <section class="section">
   <div class="wrapper">
+    <header class="banner">
+      <a href="/" class="banner__logo">
+        <img src="app/images/content/jparre-logo.svg" alt="J.Parré Apparel" />
+      </a>
+    </header>
+
     <article class="grid grid--2-columns">
       <div>
 
@@ -49,3 +55,5 @@
     </article>
   </div>
 </section>
+
+{{= it.include('footer') }}
