--- a/ui/pages/index.dot.html
+++ b/ui/pages/index.dot.html
@@ -3,13 +3,13 @@
   "template": "application"
 }
 
-<section class="banner">
-  <header class="banner__header">
-    <a href="/" class="banner__logo">
+<section class="splash">
+  <header class="splash__header">
+    <a href="/" class="splash__logo">
       <img src="app/images/content/jparre-logo.svg" alt="J.Parré Apparel" />
     </a>
-    <h1 class="banner__title">J.Parré</h1>
-    <p class="banner__copy">Indipendant Clothing Brand<br /> 
+    <h1 class="splash__title">J.Parré</h1>
+    <p class="splash__copy">Indipendant Clothing Brand<br /> 
     Based in London<br /> 
     Est. 2016</p>
 
