--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="custom">
   <head>
+    <!-- Title -->
+    <title>RTV</title>
+
+    <!-- Display Metas-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=no">
-    <link rel="stylesheet" href="./assets/application.production.css">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+
+    <!-- Stylesheets-->
+    <link rel="stylesheet" href="/assets/application.production.css">
   </head>
-  <body>
+  <body class="no-touch">
     <div id="app"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="./assets/application.production.js"></script>
+    <script src="/assets/application.production.js"></script>
   </body>
 </html>
