--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" class="custom">
   <head>
-    <!-- Title -->
-    <title>RTV</title>
+    <title>J.Parré Apparel</title>
 
-    <!-- Display Metas-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta charset="UTF-8">
 
-    <!-- Stylesheets-->
     <link rel="stylesheet" href="/assets/application.production.css">
   </head>
   <body class="no-touch">
