listing and product page styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="custom">
   <head>
-    <title>J.Parré Apparel</title>
+    <title>J.Parré Apparel Co.</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
