--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
   </head>
   <body class="no-touch">
     <div id="app"></div>
+    <script id="__st">
+    var __st={
+      "a": 11329968, 
+      "offset": 0, 
+      "pageurl": "j.parre.co", 
+      "p": "Website"
+    };
+    </script>
+    <script src="//cdn.shopify.com/s/javascripts/shopify_stats.js?v=6"></script>
     <script src="/assets/application.production.js"></script>
   </body>
 </html>
