--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>J.Parré Apparel Co.</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="/assets/application.production.css">
