--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display" rel="stylesheet">
     <title>J.Parré Apparel Co.</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99705061-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-99705061-1');
+    </script>
   </head>
   <body>
     <noscript>
