pages meta title setup

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display" rel="stylesheet">
-    <title>J.Parré Apparel Co.</title>
+    <title>J.Parré Apparel Co</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99705061-1"></script>
     <script>
